--- a/javascriptmas.html
+++ b/javascriptmas.html
@@ -108,6 +108,10 @@
 			<p>Day 22:
 				<a href="https://scrimba.com/scrim/cof254ce69800202c4bf4e645">Extract Matrix Column</a>
 			</p>
+
+			<p>Day 23:
+				<a href="https://scrimba.com/scrim/cod9a4ca3aeaafb6f0bb95d8e">Social Media Input</a>
+			</p>
 		</div>
 	</body>
 </html>
