--- a/javascriptmas.html
+++ b/javascriptmas.html
@@ -112,6 +112,10 @@
 			<p>Day 23:
 				<a href="https://scrimba.com/scrim/cod9a4ca3aeaafb6f0bb95d8e">Social Media Input</a>
 			</p>
+
+			<p>Day 24:
+				<a href="https://scrimba.com/scrim/co4cc43f386f5e3baffd4329b">Spinner</a>
+			</p>
 		</div>
 	</body>
 </html>
